--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<link rel="icon" href="docs/assets/logo.png">
+	<title>
+		Bafna Lab
+	</title>
+</head>
+ <iframe src="header.html" style="height: 12rem; width: 100%" frameborder="0" scrolling="no"></iframe>
+
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<link rel="stylesheet" href="stylesheets/index.css">
+	<div class="profile_picture">
+		<img style="width:12rem;height:12rem;" src="docs/assets/profile.png">
+	</div>
+	<h1 class='name'> Gino Prasad </h1>
+	<div class='about_container'>
+		<span></span>
+		<div class='about'>
+			We are a Applied Computer Science lab in UC San Diego with research on Extra-Chromosomal DNA.
+		</div>
+		<span></span>
+
+	</div>
+	<div class='index'>
+		<br><br>
+		<h2> Publications </h2>
+		<ul>
+		</ul>
+	</div>
 </body>
 </html>
