--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="profile_picture">
 		<img style="width:12rem;height:12rem;" src="docs/assets/profile.png">
 	</div>
-	<h1 class='name'> Gino Prasad </h1>
+	<h1 class='name'> UC San Diego Bafna Lab </h1>
 	<div class='about_container'>
 		<span></span>
 		<div class='about'>
