--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<link rel="stylesheet" href="stylesheets/index.css">
 	<div class="profile_picture">
-		<img style="width:12rem;height:12rem;" src="docs/assets/profile.png">
+		<img style="width:18rem;height:19.89rem;" src="docs/assets/profile.jpeg">
 	</div>
 	<h1 class='name'> UC San Diego Bafna Lab </h1>
 	<div class='about_container'>
