--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class='about_container'>
 		<span></span>
 		<div class='about'>
-			We are a Applied Computer Science lab in UC San Diego with research on Extra-Chromosomal DNA.
+			We are an Applied Computer Science lab at UC San Diego, advancing research in Extra-Chromosomal DNA amplified cancer through innovative computational approaches.
 		</div>
 		<span></span>
 
